create route delete student and add routes to swagger
